samples/_failures_safe/1761592853_45a01e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee4a1cbf.c: In function ‘main’:
./samples/SAFE/__tmp_ee4a1cbf.c:147:9: error: ‘buffer’ undeclared (first use in this function); did you mean ‘Buffer’?
  147 |         buffer
      |         ^~~~~~
      |         Buffer
./samples/SAFE/__tmp_ee4a1cbf.c:147:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ee4a1cbf.c:147:15: error: expected ‘;’ at end of input
  147 |         buffer
      |               ^
      |               ;
./samples/SAFE/__tmp_ee4a1cbf.c:147:9: error: expected declaration or statement at end of input
  147 |         buffer
      |         ^~~~~~
./samples/SAFE/__tmp_ee4a1cbf.c:147:9: error: expected declaration or statement at end of input
